fix superglobal collage collection; fix graph item delete button; fix z-index bug in graph legend items; change alignment of from/to date

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -392,7 +392,7 @@ input.input-medium.search-query {
 
 
 .popup-toggle{
-    max-width: 220px;  
+    max-width: 220px;
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -1286,20 +1286,6 @@ div.graph-legend h5{
     color: #0084B4;
     font-size: .9em;
     cursor: pointer;
-}
-
-
-div.graph-legend ul {
-   opacity: .7;
-   transition: opacity .75s ease-in-out;
-   -moz-transition: opacity .75s ease-in-out;
-   -webkit-transition: opacity .75s ease-in-out;
-}
-div.graph-legend ul:hover {
-   opacity: 1;
-   transition: opacity .75s ease-in-out;
-   -moz-transition: opacity .75s ease-in-out;
-   -webkit-transition: opacity .75s ease-in-out;
 }
 
 
